# v2rayn-widget

./: .gitignore  AGENTS.md  README.md
.audit/: 0014.chunk00  0014.chunk01  0014.chunk02  0014.chunk03  0014.chunk03-tail  0014.chunk04  0014.patch.gz.b64  final-race-clippy.patch  part1.patch  part2.patch  part3.patch  part4.patch
.audit/0015/: actual-sha.txt  (+11 more)
.beads/: config.yaml  metadata.json
.github/: pull_request_template.md
docs/: PRD.md  architecture.md  release-process.md  research-notes.md  tasks.md  ui-reference.md
project-tracking/: README.md
scripts/: apply_0022_audit_fixes.py  assert-ci-prerequisites.ps1  build-installer.ps1  build-portable.ps1  ci-toolchain-policy.json  rust-env.ps1  test-installer-toolchain-contracts.mjs  test-rust.ps1  test-workflow-contracts.mjs  test_workflow_contracts.py
src/tauri/: Cargo.toml  tauri.conf.json  tauri.installer.conf.json
src/tauri/capabilities/: default.json
src/tauri/src/: client_commands.rs  main.rs
src/tauri/src/adapters/: happ.rs  mod.rs  v2rayn.rs
src/tauri/src/commands/: mod.rs
src/tauri/src/models/: client.rs  debug.rs  locale.rs  mod.rs  path_validation.rs  profile.rs  settings.rs  status.rs
src/tauri/src/services/: config_reader.rs  config_reader_safe.rs  happ_ui.rs  health_check.rs  log_reader.rs  mod.rs  privilege.rs  process_monitor.rs  status_service.rs  ui_controller.rs
src/tauri/src/state/: app_state.rs
src/tauri/src/utils/: app_paths.rs  autostart.rs  file_store.rs  locale.rs  logger.rs  mod.rs  settings_normalization.rs  settings_store.rs  window_position.rs  window_visuals.rs
(+169 files in other folders)
