[package]
name = "v2rayn-widget"
version = "1.0.0"
edition = "2021"
description = "Compact Windows dashboard for proxy and VPN desktop clients"
authors = ["lgg"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
once_cell = "1.20"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys-locale = "0.3"
sysinfo = "0.33"
tauri = { version = "2.2", features = ["tray-icon"] }
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
] }
winreg = "0.55"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]


